﻿   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bug fixed
       - 
    - Misc
       - 

- 2.1.1 (12/23/2012)
    - Bug fixed
       - Fixed arrays serialization in GWT edition.
         Contributed by Jeff Plourde.
       - Fixed internal HTTP connector to enable handling of asynchronous
         client requests. Contributed by Florian Bucklers
       - Fixed controllerSleepTimeMs default value in documentation for 
         internal HTTP connector.
       - Fixed generation of requests in GWT edition, using the browser agent
         name by default.
       - Fixed implementation of method "getAttribute" by the ClientResource 
         and ServerResource classes (issue #695). Reported by Dennis Mitchell.
       - Fixed conversion Java Double/EDM.Double types in OData extension.
         Reported by Martin Grohmann.
       - Took care of the IPV6 addresses. Reported by Laurent Rustuel.
       - Add missing implementation in BufferingRepresentation for issue #681.
         Contributed by Florian Bucklers.
       - Added support of multiple levels of $expand in OData extension.
         Contributed by Emmanuel Liossis. 
       - Fixed potential infinite loops while reading headers
         (issues #599 and #656). Reported by Wei Wei Wang.
       - Fixed reading of Via header (issue #599).
         Reported by Nicolas Rinaudo.
       - Strict conneg should evaluate media type parameters (issue #559, #652).
         Reported and contributed by Andy Dennie.
       - Fixed CookieAuthenticator which should redirect the user's browser to the 
         getLoginFormPath() when the credentials are missing or stale (issue #697).
         Reported and contributed by Tim Peierls.
    - Misc
       - Prevent logging of verbose stack trace. Reported by Grzegorz Godlewski.

- 2.1.0 (09/20/2012)
    - Misc
       - Added support of GWT 2.5.
    
- 2.1 Release Candidate 6 (08/22/2012)
    - Bug fixed